src/ui/snapshots/kvn_tui__ui__layout__tests__draw_paste_uri_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Profiles ────────────────────────────┐┌ Logs ────────────────────────────────┐
│Name          Protocol Address  Port  ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│               ┌ Paste URI ───────────────────────────────────┐               │
│               │                 Paste VPN URI                │               │
│               │                                              │               │
│               │           vless://uuid@1.2.3.4#name          │               │
│               │                                              │               │
│               │        Enter to confirm, Esc to cancel       │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [Global] [Geo: 2026-05-31 13:41]
