src/ui/snapshots/kvn_tui__ui__layout__tests__draw_service_routing_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│No sources. Press p to paste a profile││                                      │
│or subscription URL from clipboard.   ││                                      │
│               ┌ Services ────────────────────────────────────┐               │
│               │                Service routing               │               │
│               │                                              │               │
│               │            Steam     ‹  Direct  ›            │               │
│               │          > Telegram  ‹  Proxy   › *          │               │
│               │                                              │               │
│               │      Enter confirm, q/Esc cancel, ? help     │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 DISCONNECTED                                       DoH  Global    (off) never
