src/ui/snapshots/kvn_tui__ui__layout__tests__draw_sources_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 20)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections          │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sources ─────────────────────────────┐┌ Logs ────────────────────────────────┐
│Standalone profiles (2)               ││                                      │
│├ Alpha             vless  1.1.1.1:443││                                      │
│└ Beta              vless  2.2.2.2:443││                                      │
│                                      ││                                      │
│Subscription: Example (2) [🗘 1d]      ││                                      │
│├ Gamma             vless  3.3.3.3:443││                                      │
│└ Delta             vless  4.4.4.4:443││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
│                                      ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
[DISCONNECTED] [DNS: DoH] [Global] [Geo: 2026-05-31 13:41]
